--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ imenbadadi }}
-          password: ${{ Rh_%6?NUdR6P%-X }}
+          username: imenbadadi
+          password: Rh_%6?NUdR6P%-X
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
