--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - "v16"
+      - "main"
 
 jobs:
   docker:
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: user/app:latest
+          tags: imenbadadi/cloud-s1
